# cold-wallet

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32F401XX_FLASH.ld  coldWallet_C.ioc  w_core_build.py
Drivers/button/: button.cppm
Drivers/display/: HAL_Delay_us.cppm  display.cppm  model.md
Drivers/keys/: keys.cppm
Drivers/uart/: UART.cppm
Drivers/usart/: uart.cppm
Inc/: main.h  stm32f4xx_hal_conf.h
Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
commands/: commands.cppm
keys/: CMakeLists.txt  build.py  main.cpp  wallet.cppm
logger/: logger.cppm  logger_mcu.cppm
main_pc/: BEP20.cppm  CMakeLists.txt  input_manager.cppm  main.cpp  serial.cppm  transaction.cppm
signer/: Cargo.toml  signer.cppm
signer/src/: lib.rs
utils/: commands.cppm  logger_mcu.cppm  logger_pc.cppm  result.cppm  transaction.cppm
